--- a/package.json
+++ b/package.json
@@ -47,10 +47,7 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "main": [
-    "dist/malhar-angular-dashboard.css",
-    "dist/malhar-angular-dashboard.js"
-  ],
+  "main": "",
   "scripts": {
     "test": "gulp test"
   }
